Changes to support navigation control over iframe

--- a/popup.html
+++ b/popup.html
@@ -15,7 +15,8 @@
   <style>
   </style>
 
-  <body id="fake">
+  <body>
+      <iframe id="bot-target" width="100%" height="500px" src="http://gsi.dit.upm.es"></iframe>
       <div class="" id="bot_chat_window">
           <div id="upper_bar">
             <h3>
